--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>李伯睿作業2</title>
 <meta name="description" content="Zen is a free XHTML template released on a creative commons attribution license" />
 <meta name="keywords" content="Zen Template" />
+<meta name="google-site-verification" content="Zt-tHkZyl83nLNIilm0MzsqV2_4qcR1P5W3Z1gjt-KY" />
 <link rel="stylesheet" type="text/css" href="style.css"/>
 <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
 <link href='http://fonts.googleapis.com/css?family=Voces' rel='stylesheet' type='text/css' />
